haproxy/kubernetes/deployment.yml

apiVersion: v1
kind: Namespace
metadata:
  name: consent-manager

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-test
  namespace: consent-manager
  labels:
    app: haproxy-test
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: haproxy-test
  template:
    metadata:
      labels:
        app: haproxy-test
    spec:
      containers:
        - name: haproxy-test
          image: devinfysurveyappregistry.azurecr.io/haproxy-test:latest
          
          ports:
            - name: http
              containerPort: 8080
